fix: make assembler matrix pattern tile Java 8 compatible